[tool.poetry]
name = "aio-spamwatch"
version = "0.0.5"
description = "An asynchronous Python wrapper for the SpamWatch API."
authors = ["NachABR <nachabr@protonmail.com>"]
license = "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.7"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
